--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -4,9 +4,8 @@
     android:id="@+id/tool_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/actionBarSize"
-    android:fitsSystemWindows="true"
-    android:background="?attr/colorPrimaryDark">
+    style="@style/App.ToolBar"
+    android:fitsSystemWindows="true">
 
     <TextView
         android:id="@+id/tool_bar_title"
@@ -16,7 +15,7 @@
         android:layout_gravity="center"
         android:maxLines="1"
         android:ellipsize="end"
-        style="?attr/toolBarTitleTextAppearance"
+        style="@style/App.ToolBar.TextAppearance.Title"
         tools:text="@string/app_name" />
 
 </android.support.v7.widget.Toolbar>
