--- a/app/src/main/res/drawable/divider_horizontal.xml
+++ b/app/src/main/res/drawable/divider_horizontal.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/Gray" />
-    <size android:height="1px" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:left="15dp" android:right="15dp">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <solid android:color="@color/Gray" />
+            <size android:height="1px" />
+        </shape>
+    </item>
+</layer-list>
