--- a/app/src/main/res/layout/frag_preview.xml
+++ b/app/src/main/res/layout/frag_preview.xml
@@ -6,7 +6,7 @@
     <com.yzg.myapplication.widget.TexturePreview
         android:id="@+id/auto_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/btn_jump"
